--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,9 @@
         </nav>
     </header>
     <main>
-
+      <div>
+        <h1>Projects</h1>
+      </div>
     </main>
     <footer>
         <div>
