Add container for project images carousel

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,9 @@
       <div>
         <h1>Projects</h1>
       </div>
+      <div>
+        TODO: Add carousel for project images!
+      </div>
     </main>
     <footer>
         <div>
