Add project descriptions section.

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,9 @@
       <div>
         TODO: Add carousel for project images!
       </div>
+      <div>
+        <p>TODO: Add project description for corresponding image in carousel.</p>
+      </div>
     </main>
     <footer>
         <div>
