Add title to Contact page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,9 @@
         </nav>
     </header>
     <main>
-
+      <div>
+        <h1>Contact</h1>
+      </div>
     </main>
     <footer>
         <div>
