Add section for Contact page icons

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,17 @@
       <div>
         <h1>Contact</h1>
       </div>
+      <div>
+        <div>
+          TODO: Add email icon/image.
+        </div>
+        <div>
+          TODO: Add GitHub icon/image.
+        </div>
+        <div>
+          TODO: Add Microsoft Teams icon/image.
+        </div>
+      </div>
     </main>
     <footer>
         <div>
