Add message to Contact page

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,13 @@
         <h1>Contact</h1>
       </div>
       <div>
+        <p>
+          Please email us with any questions or inquiries.
+          <br>
+          We are interested in working with outside groups, companies, and industry professionals!
+        </p>
+      </div>
+      <div>
         <div>
           TODO: Add email icon/image.
         </div>
