Add council members section to Contact page

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,27 @@
           TODO: Add Microsoft Teams icon/image.
         </div>
       </div>
+      <div>
+        <div>
+          <h2>Council Members</h2>
+        </div>
+        <div>
+          <img src="#">
+          <p>President - Hannah Armstrong</p>
+        </div>
+        <div>
+          <img src="#">
+          <p>Vice President - Savannah Hilton</p>
+        </div>
+        <div>
+          <img src="#">
+          <p>Secretary - Richard Foy</p>
+        </div>
+        <div>
+          <img src="#">
+          <p>Treasurer - Jacob Banuelos</p>
+        </div>
+      </div>
     </main>
     <footer>
         <div>
