Added classes to index

--- a/index.html
+++ b/index.html
@@ -1,57 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
+    <!--FONT AWESOME ICONS-->
     <title>Web Dev Club</title>
 </head>
-<body>
-    <header>
-        <img src="#"> 
-        <h1>Web Dev Club</h1>
-        <nav>
-            <ul>
-                <li>Projects</li>
-                <li>Events</li>
-                <li>Contact</li>
-                <button>Join Us!</button>
+
+<body class="body">
+    <header class="header">
+        <img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo">
+        <nav class="nav">
+            <ul class="nav__ul">
+                <li class="nav__li">Projects</li>
+                <li class="nav__li">Events</li>
+                <li class="nav__li">Contact</li>
+                <button class="nav__joinButton">Join Us!</button>
             </ul>
         </nav>
     </header>
-    <main>
-      <div>
-        <img src="#">
-        <button>Join Us!</button>
-      </div>
-      <div>
-        <div>
-            <p></p>
+    <main class="main">
+        <div class="main__joinUsDiv">
+            <img class="main__logo" src="/images/webdevclubsvglogo.svg" alt="Join us!">
+            <button class="main__joinButtong">Join Us!</button>
         </div>
-        <img src="" alt="">
-      </div>
-      <div>
-        <div>
-            <h2></h2>
+        <div class="main__infoFlexDiv">
+            <div class="main__paragraphDiv">
+                <p class="main__paragraph">
+                    The Web Dev Club is for people interested or passionate about creating websites. Aspiring Web
+                    Developers
+                    can gain experience collaborating with Web Designers, Marketing majors, and other UVU majors! There
+                    are
+                    so many ways to participate and contribute to the club while learning about website development.
+                    We'll
+                    create group projects, have guest speakers, and most importantly have a great time.
+                </p>
+            </div>
+            <img class="main__councilImage" src="/images/webdevcouncil2022.jpg" alt="Web Dev Club Council 2022">
         </div>
-        <div>
-            <h2></h2>
+        <div class="main__circleDivFlex">
+            <div class="main__circle">
+                <h2 class="main__circleTitle">Collaborate</h2>
+            </div>
+            <div class="main__circle">
+                <h2 class="main__circleTitle">Meet People</h2>
+            </div>
+            <div class="main__circle">
+                <h2 class="main__circleTitle">Network</h2>
+            </div>
         </div>
-        <div>
-            <h2></h2>
-        </div>
-      </div>
     </main>
-    <footer>
-        <div>
-        &copy; 2022 Web Dev Club 
+    <footer class="footer">
+        <div class="footer__copyright">
+            &copy; 2022 Web Dev Club at UVU
         </div>
-        <div>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+        <div class="footer__iconsDiv">
+            <i class="footer__icon fa-solid fa-envelope">
+                <h3 class="footer__iconTitle">Mail</h3>
+            </i>
+            <!--Mail Icon-->
+            <i class="footer__icon fa-brands fa-discord">
+                <h3 class="footer__iconTitle">Discord</h3>
+            </i>
+            <!--Discord-->
+            <i class="footer__icon fa-brands fa-github">
+                <h3 class="footer__iconTitle">Github</h3>
+            </i>
+            <!--Github-->
         </div>
     </footer>
 </body>
+
 </html>
