--- a/calendar.html
+++ b/calendar.html
@@ -7,15 +7,14 @@
     <title>Web Dev Club</title>
 </head>
 <body>
-    <header>
-        <img src="#"> 
-        <h1>Web Dev Club</h1>
-        <nav>
-            <ul>
-                <li>Projects</li>
-                <li>Events</li>
-                <li>Contact</li>
-                <button>Join Us!</button>
+    <header class="header">
+        <img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo">
+        <nav class="nav">
+            <ul class="nav__ul">
+                <li class="nav__li">Projects</li>
+                <li class="nav__li">Events</li>
+                <li class="nav__li">Contact</li>
+                <button class="nav__joinButton">Join Us!</button>
             </ul>
         </nav>
     </header>
