--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@
       </div>
       <div>
         <div>
-          TODO: Add email icon/image.
+          <button><i class="fa-solid fa-envelope"></i>Mail</button> 
         </div>
         <div>
-          TODO: Add GitHub icon/image.
+          <button><i class="fa-brands fa-github"></i>Github</button> 
         </div>
         <div>
-          TODO: Add Microsoft Teams icon/image.
+          <button><i class="fa-brands fa-discord"></i>Discord</button>
         </div>
       </div>
       <div>
@@ -64,15 +64,14 @@
       </div>
     </main>
     <footer>
-        <div>
-        &copy; 2022 Web Dev Club 
-        </div>
-        <div>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-        </div>
-    </footer>
+      <div>
+          &copy; 2022 Web Dev Club at UVU 
+      </div>
+      <div>
+          <button><i class="fa-solid fa-envelope"></i>Mail</button> <!--Mail Icon-->
+          <button><i class="fa-brands fa-discord"></i>Discord</button> <!--Discord-->
+          <button><i class="fa-brands fa-github"></i>Github</button> <!--Github-->
+      </div>
+  </footer>
 </body>
 </html>
