--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main">
         <div class="main__joinUsDiv">
             <img class="main__logo" src="/images/webdevclubsvglogo.svg" alt="Join us!">
-            <button class="main__joinButtong">Join Us!</button>
+            <button class="main__joinButton">Join Us!</button>
         </div>
         <div class="main__infoFlexDiv">
             <div class="main__paragraphDiv">
