--- a/calendar.html
+++ b/calendar.html
@@ -21,15 +21,23 @@
     <main>
 
     </main>
-    <footer>
-        <div>
-        &copy; 2022 Web Dev Club 
+    <footer class="footer">
+        <div class="footer__copyright">
+            &copy; 2022 Web Dev Club at UVU
         </div>
-        <div>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+        <div class="footer__iconsDiv">
+            <i class="footer__icon fa-solid fa-envelope">
+                <h3 class="footer__iconTitle">Mail</h3>
+            </i>
+            <!--Mail Icon-->
+            <i class="footer__icon fa-brands fa-discord">
+                <h3 class="footer__iconTitle">Discord</h3>
+            </i>
+            <!--Discord-->
+            <i class="footer__icon fa-brands fa-github">
+                <h3 class="footer__iconTitle">Github</h3>
+            </i>
+            <!--Github-->
         </div>
     </footer>
 </body>
