--- a/contact.html
+++ b/contact.html
@@ -63,14 +63,23 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div>
-          &copy; 2022 Web Dev Club at UVU 
+    <footer class="footer">
+      <div class="footer__copyright">
+          &copy; 2022 Web Dev Club at UVU
       </div>
-      <div>
-          <button><i class="fa-solid fa-envelope"></i>Mail</button> <!--Mail Icon-->
-          <button><i class="fa-brands fa-discord"></i>Discord</button> <!--Discord-->
-          <button><i class="fa-brands fa-github"></i>Github</button> <!--Github-->
+      <div class="footer__iconsDiv">
+          <i class="footer__icon fa-solid fa-envelope">
+              <h3 class="footer__iconTitle">Mail</h3>
+          </i>
+          <!--Mail Icon-->
+          <i class="footer__icon fa-brands fa-discord">
+              <h3 class="footer__iconTitle">Discord</h3>
+          </i>
+          <!--Discord-->
+          <i class="footer__icon fa-brands fa-github">
+              <h3 class="footer__iconTitle">Github</h3>
+          </i>
+          <!--Github-->
       </div>
   </footer>
 </body>
