--- a/projects.html
+++ b/projects.html
@@ -7,18 +7,17 @@
     <title>Web Dev Club</title>
 </head>
 <body>
-    <header>
-        <img src="#"> 
-        <h1>Web Dev Club</h1>
-        <nav>
-            <ul>
-                <li>Projects</li>
-                <li>Events</li>
-                <li>Contact</li>
-                <button>Join Us!</button>
-            </ul>
-        </nav>
-    </header>
+  <header class="header">
+    <img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo">
+    <nav class="nav">
+        <ul class="nav__ul">
+            <li class="nav__li">Projects</li>
+            <li class="nav__li">Events</li>
+            <li class="nav__li">Contact</li>
+            <button class="nav__joinButton">Join Us!</button>
+        </ul>
+    </nav>
+</header>
     <main>
       <div>
         <h1>Projects</h1>
@@ -30,16 +29,24 @@
         <p>TODO: Add project description for corresponding image in carousel.</p>
       </div>
     </main>
-    <footer>
-        <div>
-        &copy; 2022 Web Dev Club 
-        </div>
-        <div>
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-        </div>
-    </footer>
+    <footer class="footer">
+      <div class="footer__copyright">
+          &copy; 2022 Web Dev Club at UVU
+      </div>
+      <div class="footer__iconsDiv">
+          <i class="footer__icon fa-solid fa-envelope">
+              <h3 class="footer__iconTitle">Mail</h3>
+          </i>
+          <!--Mail Icon-->
+          <i class="footer__icon fa-brands fa-discord">
+              <h3 class="footer__iconTitle">Discord</h3>
+          </i>
+          <!--Discord-->
+          <i class="footer__icon fa-brands fa-github">
+              <h3 class="footer__iconTitle">Github</h3>
+          </i>
+          <!--Github-->
+      </div>
+  </footer>
 </body>
 </html>
