Added links to header

--- a/calendar.html
+++ b/calendar.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo">
+        <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
         <nav class="nav">
             <ul class="nav__ul">
-                <li class="nav__li">Projects</li>
-                <li class="nav__li">Events</li>
-                <li class="nav__li">Contact</li>
-                <button class="nav__joinButton">Join Us!</button>
+                <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
+                <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
+                <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
+                <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
             </ul>
         </nav>
     </header>
