--- a/contact.html
+++ b/contact.html
@@ -7,18 +7,17 @@
     <title>Web Dev Club</title>
 </head>
 <body>
-    <header>
-        <img src="#"> 
-        <h1>Web Dev Club</h1>
-        <nav>
-            <ul>
-                <li>Projects</li>
-                <li>Events</li>
-                <li>Contact</li>
-                <button>Join Us!</button>
-            </ul>
-        </nav>
-    </header>
+  <header class="header">
+    <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
+    <nav class="nav">
+        <ul class="nav__ul">
+            <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
+            <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
+            <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
+            <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
+        </ul>
+    </nav>
+</header>
     <main>
       <div>
         <h1>Contact</h1>
