--- a/calendar.html
+++ b/calendar.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
+    <!--FONT AWESOME ICONS-->
     <title>Web Dev Club</title>
 </head>
 <body>
@@ -19,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <div> <!--Will make different calendar in future-->
+        <div> <!--Embed Google Calendar, will make different calendar in future-->
             <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=d2ViZGV2Y2x1YnV2dUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </main>
