--- a/projects.html
+++ b/projects.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
-    <!--FONT AWESOME ICONS-->
-    <title>Web Dev Club</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
+  <!--FONT AWESOME ICONS-->
+  <title>Web Dev Club</title>
 </head>
-<body>
+
+<body class="body">
   <header class="header">
-    <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
+    <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg"
+        alt="Web Dev Club Logo"></a>
+    <!--Link back to homepage-->
     <nav class="nav">
-        <ul class="nav__ul">
-            <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
-            <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
-            <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
-            <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
-        </ul>
+      <ul class="nav__ul">
+        <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
+        <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
+        <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
+        <button class="nav__joinButton"><a class="nav__joinAnchor"
+            href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
+      </ul>
     </nav>
-</header>
-    <main>
-      <div>
-        <h1>Projects</h1>
-      </div>
-      <div>
-        TODO: Add carousel for project images!
-      </div>
-      <div>
-        <p>TODO: Add project description for corresponding image in carousel.</p>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="footer__copyright">
-          &copy; 2022 Web Dev Club at UVU
-      </div>
-      <div class="footer__iconsDiv">
-          <i class="footer__icon fa-solid fa-envelope">
-              <h3 class="footer__iconTitle">Mail</h3>
-          </i>
-          <!--Mail Icon-->
-          <i class="footer__icon fa-brands fa-discord">
-              <h3 class="footer__iconTitle">Discord</h3>
-          </i>
-          <!--Discord-->
-          <i class="footer__icon fa-brands fa-github">
-              <h3 class="footer__iconTitle">Github</h3>
-          </i>
-          <!--Github-->
-      </div>
+  </header>
+  <main class="main">
+    <div class="main__titleDiv"> <!--Same class as contacts and events page-->
+      <h1 class="main__projectsTitle">Projects</h1>
+    </div>
+    <div class="main__projectCarousel">
+      TODO: Add carousel for project images!
+    </div>
+    <div class="main__projectDescription">
+      <p>TODO: Add project description for corresponding image in carousel.</p>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="footer__copyright">
+      &copy; 2022 Web Dev Club at UVU
+    </div>
+    <div class="footer__iconsDiv">
+      <i class="footer__icon fa-solid fa-envelope">
+        <h3 class="footer__iconTitle">Mail</h3>
+      </i>
+      <!--Mail Icon-->
+      <i class="footer__icon fa-brands fa-discord">
+        <h3 class="footer__iconTitle">Discord</h3>
+      </i>
+      <!--Discord-->
+      <i class="footer__icon fa-brands fa-github">
+        <h3 class="footer__iconTitle">Github</h3>
+      </i>
+      <!--Github-->
+    </div>
   </footer>
 </body>
+
 </html>
