index page almost done!

--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
+  <link href="/css/contact.css" rel="stylesheet">
+  <link href="/css/shared.css" rel="stylesheet">
   <!--FONT AWESOME ICONS-->
   <title>Web Dev Club</title>
 </head>
 
 <body class="body">
+  <div class="header__wrapperWidth">
   <header class="header">
     <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg"
         alt="Web Dev Club Logo"></a>
@@ -25,6 +28,7 @@
       </ul>
     </nav>
   </header>
+  </div>
   <main class="main">
     <div class="main__titleDiv"> <!--Same class as contacts and events page-->
       <h1>Contact</h1>
@@ -69,6 +73,7 @@
       </div>
     </div>
   </main>
+  <div class="footer__wrapperWidth">
   <footer class="footer">
     <div class="footer__copyright">
       &copy; 2022 Web Dev Club at UVU
@@ -88,6 +93,7 @@
       <!--Github-->
     </div>
   </footer>
+  </div>
 </body>
 
 </html>
