--- a/events.html
+++ b/events.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
+    <link href="/css/events.css" rel="stylesheet">
+    <link href="/css/shared.css" rel="stylesheet">
     <!--FONT AWESOME ICONS-->
     <title>Web Dev Club</title>
 </head>
 <body class="body">
+    <div class="header__wrapperWidth">
     <header class="header">
         <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
         <nav class="nav">
@@ -20,6 +23,7 @@
             </ul>
         </nav>
     </header>
+    </div>
     <main class="main">
         <div class="main__titleDiv"> <!--Same class as contacts and events page-->
             <h1>Upcoming Events</h1>
@@ -41,6 +45,7 @@
             <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=d2ViZGV2Y2x1YnV2dUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </main>
+    <div class="footer__wrapperWidth">
     <footer class="footer">
         <div class="footer__copyright">
             &copy; 2022 Web Dev Club at UVU
@@ -60,5 +65,6 @@
             <!--Github-->
         </div>
     </footer>
+    </div>
 </body>
 </html>
