--- a/projects.html
+++ b/projects.html
@@ -6,27 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
+  <link href="/css/projects.css" rel="stylesheet">
+  <link href="/css/shared.css" rel="stylesheet">
   <!--FONT AWESOME ICONS-->
   <title>Web Dev Club</title>
 </head>
 
 <body class="body">
+  <div class="header__wrapperWidth">
   <header class="header">
     <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg"
         alt="Web Dev Club Logo"></a>
     <!--Link back to homepage-->
-    <nav class="nav">
-      <ul class="nav__ul">
-        <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
-        <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
-        <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
-        <button class="nav__joinButton"><a class="nav__joinAnchor"
-            href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__ul">
+          <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
+          <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
+          <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
+          <button class="nav__joinButton"><a class="nav__joinAnchor"
+              href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
+        </ul>
+      </nav>
   </header>
+  </div>
   <main class="main">
-    <div class="main__titleDiv"> <!--Same class as contacts and events page-->
+    <div class="main__titleDiv">
+      <!--Same class as contacts and events page-->
       <h1 class="main__projectsTitle">Projects</h1>
     </div>
     <div class="main__projectCarousel">
@@ -36,6 +41,7 @@
       <p>TODO: Add project description for corresponding image in carousel.</p>
     </div>
   </main>
+  <div class="footer__wrapperWidth">
   <footer class="footer">
     <div class="footer__copyright">
       &copy; 2022 Web Dev Club at UVU
@@ -55,6 +61,7 @@
       <!--Github-->
     </div>
   </footer>
+  </div>
 </body>
 
 </html>
