--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,13 @@
         <br>
         We are interested in working with outside groups, companies, and industry professionals!
       </p>
+      <form method="get">
+        <label id="name">
+          <input type="text" value="name">
+        </label>
+        <input type="textarea">
+        <input type="submit" value="Submit">
+      </form>
     </div>
     <div>
       <div>
