--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         </div>
     </footer>
     </div>
+    <script type="text/javascript" src="dist/purify.min.js"></script>
 </body>
 
 </html>
