--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
                 <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
                 <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
-                <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
+                <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> JOIN</a></button>
             </ul>
         </nav>
     </header>
