--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="main">
         <div class="main__joinUsDiv">
             <img class="main__logo" src="/images/webdevclublogotransparent.svg" alt="Join us!">
-            <button class="main__joinButton">Join Us!</button>
+            <button class="main__joinButton">JOIN US!</button>
         </div>
         <div class="main__infoFlexDiv">
             <div class="main__paragraphDiv">
