Modify index page paragraph formatting

--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
         <div class="main__infoFlexDiv">
             <div class="main__paragraphDiv">
                 <p class="main__paragraph">
-                    The Web Dev Club is for people interested or passionate about creating websites. Aspiring Web
-                    Developers
-                    can gain experience collaborating with Web Designers, Marketing majors, and other UVU majors! There
-                    are
-                    so many ways to participate and contribute to the club while learning about website development.
-                    We'll
-                    create group projects, have guest speakers, and most importantly have a great time.
+                    &nbsp;&nbsp;&nbsp;The Web Dev Club is for people interested or passionate about creating websites.
+                    Aspiring Web Developers can gain experience collaborating with Web Designers, Marketing majors, and other UVU majors!
+                    <br>
+                    &nbsp;&nbsp;&nbsp;There are so many ways to participate and contribute to the club while learning about website development.
+                    We'll create group projects, have guest speakers, and most importantly have a great time.
                 </p>
             </div>
             <figure class="main__councilFigure">
