Change index page circles' text to all caps

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         </div>
         <div class="main__circleDivFlex">
             <div class="main__circle">
-                <h2 class="main__circleTitle">Collaborate</h2>
+                <h2 class="main__circleTitle">COLLABORATE</h2>
             </div>
             <div class="main__circle">
-                <h2 class="main__circleTitle">Meet People</h2>
+                <h2 class="main__circleTitle">MEET PEOPLE</h2>
             </div>
             <div class="main__circle">
-                <h2 class="main__circleTitle">Network</h2>
+                <h2 class="main__circleTitle">NETWORK</h2>
             </div>
         </div>
     </main>
