--- a/index.html
+++ b/index.html
@@ -68,21 +68,26 @@
     </main>
     <div class="footer__wrapperWidth">
     <footer class="footer">
-        <div class="footer__copyright">
-            &copy; 2022 Web Dev Club at UVU
+        <div class="footer__copyrightDiv">
+            <div class="footer__copyright">
+                &copy; 2022 Web Dev Club at UVU
+            </div>
         </div>
         <div class="footer__iconsDiv">
-            <i class="footer__icon fa-solid fa-envelope">
-                <h3 class="footer__iconTitle">Mail</h3>
-            </i>
+            <div class="footer__iconWrapper">
+                <i class="footer__icon fa-solid fa-envelope fa-lg"></i>
+                <h3 class="footer__iconTitle">EMAIL</h3>
+            </div>
             <!--Mail Icon-->
-            <i class="footer__icon fa-brands fa-discord">
-                <h3 class="footer__iconTitle">Discord</h3>
-            </i>
+            <div class="footer__iconWrapper">
+                <i class="footer__icon fa-brands fa-discord fa-lg"></i>
+                <h3 class="footer__iconTitle">DISCORD</h3>
+            </div>
             <!--Discord-->
-            <i class="footer__icon fa-brands fa-github">
-                <h3 class="footer__iconTitle">Github</h3>
-            </i>
+            <div class="footer__iconWrapper">
+                <i class="footer__icon fa-brands fa-github fa-lg"></i>
+                <h3 class="footer__iconTitle">GITHUB</h3>
+            </div>
             <!--Github-->
         </div>
     </footer>
