--- a/contact.html
+++ b/contact.html
@@ -81,26 +81,31 @@
     </div>
   </main>
   <div class="footer__wrapperWidth">
-  <footer class="footer">
-    <div class="footer__copyright">
-      &copy; 2022 Web Dev Club at UVU
+    <footer class="footer">
+        <div class="footer__copyrightDiv">
+            <div class="footer__copyright">
+                &copy; 2022 Web Dev Club at UVU
+            </div>
+        </div>
+        <div class="footer__iconsDiv">
+            <div class="footer__iconWrapper">
+                <i class="footer__icon fa-solid fa-envelope fa-lg"></i>
+                <h3 class="footer__iconTitle">EMAIL</h3>
+            </div>
+            <!--Mail Icon-->
+            <div class="footer__iconWrapper">
+                <i class="footer__icon fa-brands fa-discord fa-lg"></i>
+                <h3 class="footer__iconTitle">DISCORD</h3>
+            </div>
+            <!--Discord-->
+            <div class="footer__iconWrapper">
+                <i class="footer__icon fa-brands fa-github fa-lg"></i>
+                <h3 class="footer__iconTitle">GITHUB</h3>
+            </div>
+            <!--Github-->
+        </div>
+    </footer>
     </div>
-    <div class="footer__iconsDiv">
-      <i class="footer__icon fa-solid fa-envelope">
-        <h3 class="footer__iconTitle">Mail</h3>
-      </i>
-      <!--Mail Icon-->
-      <i class="footer__icon fa-brands fa-discord">
-        <h3 class="footer__iconTitle">Discord</h3>
-      </i>
-      <!--Discord-->
-      <i class="footer__icon fa-brands fa-github">
-        <h3 class="footer__iconTitle">Github</h3>
-      </i>
-      <!--Github-->
-    </div>
-  </footer>
-  </div>
 </body>
 
 </html>
