Update header for all pages

--- a/projects.html
+++ b/projects.html
@@ -13,22 +13,19 @@
 </head>
 
 <body class="body">
-  <div class="header__wrapperWidth">
-  <header class="header">
-    <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg"
-        alt="Web Dev Club Logo"></a>
-    <!--Link back to homepage-->
-      <nav class="nav">
-        <ul class="nav__ul">
-          <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
-          <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
-          <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
-          <button class="nav__joinButton"><a class="nav__joinAnchor"
-              href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> Join Us!</a></button>
-        </ul>
-      </nav>
-  </header>
-  </div>
+  <div class="header__wrapperWidth"> <!--Div only for the background color so it stretches full width-->
+    <header class="header">
+        <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
+        <nav class="nav">
+            <ul class="nav__ul">
+                <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
+                <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
+                <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
+                <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> JOIN</a></button>
+            </ul>
+        </nav>
+    </header>
+    </div>
   <main class="main">
     <div class="main__titleDiv">
       <!--Same class as contacts and events page-->
