front page done

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <ul class="nav__ul">
                 <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
                 <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
-                <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
+                <li class="nav__li"><a class="nav__anchor active" href="/contact.html">Contact</a></li>
                 <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> JOIN</a></button>
             </ul>
         </nav>
