--- a/events.html
+++ b/events.html
@@ -20,13 +20,13 @@
             <nav class="nav">
                 <ul class="nav__ul">
                     <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
-                    <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
+                    <li class="nav__li"><a class="nav__anchor active" href="/events.html">Events</a></li>
                     <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
                     <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> JOIN</a></button>
                 </ul>
             </nav>
         </header>
-        </div>
+    </div>
     <main class="main">
         <div class="main__titleDiv"> <!--Same class as contacts and events page-->
             <h1>Upcoming Events</h1>
@@ -73,6 +73,6 @@
                 <!--Github-->
             </div>
         </footer>
-        </div>
+    </div>
 </body>
 </html>
