--- a/projects.html
+++ b/projects.html
@@ -21,14 +21,14 @@
         <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
         <nav class="nav">
             <ul class="nav__ul">
-                <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
+                <li class="nav__li"><a class="nav__anchor active" href="/projects.html">Projects</a></li>
                 <li class="nav__li"><a class="nav__anchor" href="/events.html">Events</a></li>
                 <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
                 <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campuslabs.com/engage/organization/wdc" target="_blank"> JOIN</a></button>
             </ul>
         </nav>
     </header>
-    </div>
+  </div>
   <main class="main">
     <div class="main__titleDiv">
       <!--Same class as contacts and events page-->
