projects page done

--- a/projects.html
+++ b/projects.html
@@ -34,11 +34,37 @@
       <!--Same class as contacts and events page-->
       <h1 class="main__projectsTitle">Projects</h1>
     </div>
-    <div class="main__projectCarousel">
-      TODO: Add carousel for project images!
-    </div>
-    <div class="main__projectDescription">
-      <p>TODO: Add project description for corresponding image in carousel.</p>
+    <div class="main__project">
+      <h2 class="main__projectH2">Web Dev Club Website ~ Spring 2022</h2>
+      <div class="main__projectFlex">
+        <div class="main__projectDescriptionFlex">
+          <p class="main__projectDescription">We started this website to represent our club and have a bigger reach to the UVU community and 
+            the developer community. <br>
+            This is our first design of the website. Our first step was brainstorming the site map, then we 
+            made low-fidelity wireframes for each page using Balsamiq. After agreeing upon the design, a Figma
+            high-fidelity was created and that was used by the developers to create the website pages. 
+            Our website is going to be constantly evolving to try out new technologies
+            and give members experience working on group projects with Github.<br><br>
+            Want to get involved? Here are some future features that we want to implement!
+          </p>
+          <ul class="main__projectUl">
+              <li class="main__projectLi">Create responsive mobile, tablet and desktop webpages</li>
+              <li class="main__projectLi">Convert the website to a CMS</li>
+              <li class="main__projectLi">Create a carousel for the projects page</li>
+              <li class="main__projectLi">Create a contact form</li> 
+              <li class="main__projectLi">Convert CSS to Sass</li>
+          </ul>
+        </div>
+      <div class="main__projectImages">
+        <figure class="main__projectFigure">
+          <img src="/images/balsamiq.PNG" alt="Balsamiq" class="main__projectImage">
+          <figcaption class="main__projectFigcaption">Balsamiq Low-Fidelity Wireframe</figcaption>
+        </figure>
+        <!-- <figure class="main__projectFigure">
+          <img src="/images/homepage.png" alt="Figma" class="main__projectImage">
+        </figure> -->
+      </div>
+      </div>
     </div>
   </main>
   <div class="footer__wrapperWidth">
