changed wording on projects

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
               <li class="main__projectLi">Convert the website to a CMS</li>
               <li class="main__projectLi">Create a carousel for the projects page</li>
               <li class="main__projectLi">Create a contact form</li> 
-              <li class="main__projectLi">Convert CSS to Sass</li>
+              <li class="main__projectLi">Implement Sass</li>
           </ul>
         </div>
       <div class="main__projectImages">
