--- a/events.html
+++ b/events.html
@@ -32,21 +32,35 @@
             <h1>Upcoming Events</h1>
         </div>
         <div class="main__eventDiv"> <!--Each event will have it's own main__eventDiv, display flex so the image and text are horizontal-->
-            <figure class="main__eventFigure">
-                <img src="#" class="main__eventImage"> <!--events image-->
-            </figure>
+            <!-- <figure class="main__eventFigure">
+                <img src="#" class="main__eventImage"> 
+            </figure> -->
             <div class="main__upcomingEvent">
-                <h3 class="main__eventTitle">Cotton Candy CSS</h3>
-                <h4 class="main__eventDate">03/23/2022</h4>
-                <h5 class="main__eventTime">7:00pm - 8:00pm</h5>
-                <a class="main__eventAnchor" href="#"><h6>UVU CS410</h6></a> <!--link to UVU maps-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non aliquam velit. Duis ligula tortor, tristique nec magna in, luctus gravida metus. Proin sed elit et augue convallis ultricies. Etiam et convallis enim. Curabitur non lectus et quam tristique dapibus in fermentum tortor. Aenean consectetur vestibulum urna sed interdum. Pellentesque sodales orci vel odio vehicula, ut suscipit enim molestie. Aenean lectus urna, condimentum in nisi a, porta vehicula odio. </p>
-                <a href="#">more info</a> <!--Opens up to a modal, can use bulma plugin-->
+                <h2 class="main__eventTitle">Website Eyetracking Test ~ 04/13/2022</h2>
+                <h3 class="main__eventTime">7-8pm ~  <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS410</a></h3>
+                <p class="main__eventDescription">We'll be going over the different ways to user test our clubs website, including breaking out some eyetracking software! </p>
+                <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
+            </div>
+            <div class="main__upcomingEvent">
+                <h2 class="main__eventTitle">STEM Club Minecraft Party ~ 04/19/2022</h2>
+                <h3 class="main__eventTime">7-8pm ~  <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
+                <p class="main__eventDescription">Come join the Web Dev Club, Cyber Security Club, Computer Science Club and GirlsWhoCode for a minecraft tournament to celebrate the end of a great year! First person to kill the Enderdragon wins an Amazon Kindle Fire! </p>
+                <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
+                <figure class="main__eventFigure">
+                    <img class="main__eventImage" src="/images/stemclubminecraftparty.png" alt="Stem Club Minecraft Party">
+                </figure>
             </div>
         </div>
-        <div> <!--Embed Google Calendar, will make different calendar in future-->
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=d2ViZGV2Y2x1YnV2dUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <div class="main__calendarDiv"> <!--Embed Google Calendar, will make different calendar in future-->
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=d2ViZGV2Y2x1YnV2dUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
+        <!-- <div class="main__pastEvents">
+            <h2 class="main__pastEventTitle">{ Past Events }</h2>
+            <figure class="main__pastEventFigure">
+                <img class="main__pastEventImage" src="#" alt="Cotton Candy CSS">
+                <figcaption class="main__pastEventCaption"></figcaption>
+            </figure>
+        </div> -->
     </main>
     <div class="footer__wrapperWidth">
         <footer class="footer">
